Use display from IPython.display

--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -6,7 +6,8 @@
       "name": "Internet Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOMAuLKkc6hFCdgV676WnFG",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPdm04xxAYjCd+zIt4IKNNs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,10 +48,20 @@
         "import parser\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "from IPython.display import display"
+        "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 4,
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eBNBNVOI8JB1"
+      },
+      "source": [
+        "import IPython.display as d"
+      ],
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -58,16 +69,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 203
         },
         "id": "kA30xmOUNK77",
-        "outputId": "6bb61963-366b-4a27-cf5d-205c6c073847"
+        "outputId": "84e30610-c215-4761-fe51-4e4f7a6972eb"
       },
       "source": [
         "datadf = pd.read_csv(\"data.csv\")\n",
-        "display(datadf.head())"
+        "d.display(datadf.head())"
       ],
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -177,16 +188,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 203
         },
         "id": "oc0hfG06NWQ3",
-        "outputId": "e894ad34-d726-4c07-890d-a340737d9bfc"
+        "outputId": "5587b1d1-94b7-47cf-b167-85d67dcd987a"
       },
       "source": [
         "datadf.rename(columns={\"Unnamed: 0\":\"Time\"},inplace=True)\n",
-        "display(datadf.head())"
+        "d.display(datadf.head())"
       ],
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -312,12 +323,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rl0rnjSxSLw5",
-        "outputId": "dd96127d-4dbe-4272-bd18-f2358094ec62"
+        "outputId": "15e3f774-a032-46a4-a0ab-082fc72de95f"
       },
       "source": [
         "print(datadf.shape)"
       ],
-      "execution_count": 7,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -381,13 +392,13 @@
           "height": 234
         },
         "id": "-FOqwqHGWoEZ",
-        "outputId": "c7762857-8d14-4aa3-a122-3238441cd5b4"
+        "outputId": "543dd786-c890-46d6-e271-e3f6ae1a51cf"
       },
       "source": [
         "outagedf=datadf.set_index(\"Time\",inplace=False)\n",
-        "display(outagedf.head())"
+        "d.display(outagedf.head())"
       ],
-      "execution_count": 8,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -543,7 +554,7 @@
         "    day_outages[i[:3]]+=1\n",
         "    hour_outages[str(int(i[11:13]))+\":00\"]+=1"
       ],
-      "execution_count": 9,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -554,14 +565,14 @@
           "height": 805
         },
         "id": "XLz8X0OLadTG",
-        "outputId": "18e1e6df-14db-4ba1-9a94-fe1edbed2e4c"
+        "outputId": "8d0464c3-30b2-4d05-8df6-996e9d71c0f1"
       },
       "source": [
         "hour_outagedf=pd.DataFrame({\"Count\":hour_outages}).sort_values([\"Count\"],ascending=0)\n",
         "print(\"Number of outages in each hour:\")\n",
-        "display(hour_outagedf)"
+        "d.display(hour_outagedf)"
       ],
-      "execution_count": 10,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,7 +749,7 @@
           "height": 346
         },
         "id": "LB_7lVN3arOs",
-        "outputId": "92d7a1d2-c3b2-40f3-ef2b-252600c55651"
+        "outputId": "75d44eec-30f2-43c2-a337-b8bff6dcb4b8"
       },
       "source": [
         "keys=hour_outages.keys()\n",
@@ -751,7 +762,7 @@
         "plt.title(\"Network Outages\",pad='10',fontsize=20)\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -785,14 +796,14 @@
           "height": 282
         },
         "id": "z8Il_zKrbHWN",
-        "outputId": "c15eb5fd-228e-407b-fa18-31d0ac2cc2af"
+        "outputId": "ebf655dd-439a-4107-d185-4a80718e5ba0"
       },
       "source": [
         "day_outagedf=pd.DataFrame({\"Count of Days\":day_outages}).sort_values([\"Count of Days\"],ascending=0)\n",
         "print(\"Number of outages in each week day:\")\n",
-        "display(day_outagedf)"
+        "d.display(day_outagedf)"
       ],
-      "execution_count": 12,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -884,7 +895,7 @@
           "height": 364
         },
         "id": "-iN-0_JAbPgs",
-        "outputId": "c29a1f59-bfc1-4529-f675-fc04705e1568"
+        "outputId": "0ae27187-2b26-4a6f-e9c0-9adc053270a9"
       },
       "source": [
         "keys=day_outages.keys()\n",
@@ -897,7 +908,7 @@
         "plt.title(\"Network Outages\",pad='10',fontsize=20)\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
@@ -931,15 +942,15 @@
           "height": 743
         },
         "id": "99QuTW4AbsMw",
-        "outputId": "5f4cfec5-daf6-469f-f2cc-b91c271a357f"
+        "outputId": "2c1677e6-36e4-4c0a-956b-e94895fce203"
       },
       "source": [
         "connections=pd.DataFrame({\"Connections\":servers})\n",
         "connections=connections.sort_values([\"Connections\"], ascending =0)\n",
         "print(\"Connections each server made:\")\n",
-        "display(connections)"
+        "d.display(connections)"
       ],
-      "execution_count": 14,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1121,18 +1132,18 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 417
         },
         "id": "rgldax80dig4",
-        "outputId": "93de2c51-2d83-40cc-e7e6-f3d7ebc2e4ad"
+        "outputId": "dad95cf2-388b-44f6-d1f0-dffd8b56fb6f"
       },
       "source": [
         "df=datadf.copy()\n",
         "df.insert (0,\"Day\",[row[:3] for row in df[\"Time\"]])\n",
         "df.insert (1,\"Hour\",[row[11:13]+\":00\" for row in df[\"Time\"]])\n",
-        "display(df)"
+        "d.display(df)"
       ],
-      "execution_count": 15,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1350,7 +1361,7 @@
         "  \"Upload\":\"mean\",\n",
         " \"Packet Loss\":\"mean\"}).round(2)"
       ],
-      "execution_count": 16,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1358,15 +1369,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 295
         },
         "id": "6o6w89f9ea1e",
-        "outputId": "1d4d7978-869c-42f9-caab-cdf54da986dc"
+        "outputId": "adf9a777-3152-4e88-80d7-b1674de0e660"
       },
       "source": [
-        "display(daydf)"
+        "d.display(daydf)"
       ],
-      "execution_count": 17,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1492,7 +1503,7 @@
       "source": [
         "daydf_analyse=pd.DataFrame({\"Minimum on\":daydf.idxmin(),\"Maximum on\":daydf.idxmax()})"
       ],
-      "execution_count": 18,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -1500,15 +1511,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 203
         },
         "id": "U52SDFSxepx1",
-        "outputId": "298159ef-289a-4d3f-ce4a-f58b21d68c4c"
+        "outputId": "e95e0be3-a23e-4611-867e-0384b24172b7"
       },
       "source": [
-        "display(daydf_analyse)"
+        "d.display(daydf_analyse)"
       ],
-      "execution_count": 19,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1634,7 +1645,7 @@
         "  \"Upload\":\"mean\",\n",
         " \"Packet Loss\":\"mean\"}).round(2)"
       ],
-      "execution_count": 20,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1642,15 +1653,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 819
         },
         "id": "oDltLElvfHq8",
-        "outputId": "d6162104-9132-4799-fbbe-9f3664d31a75"
+        "outputId": "e1b9ab6d-decb-47f8-edf7-d313458c815f"
       },
       "source": [
-        "display(hourdf)"
+        "d.display(hourdf)"
       ],
-      "execution_count": 21,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1929,7 +1940,7 @@
       "source": [
         "hourdf_analyse=pd.DataFrame({\"Minimum at\":hourdf.idxmin(),\"Maximum at\":hourdf.idxmax()})"
       ],
-      "execution_count": 22,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1937,15 +1948,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 203
         },
         "id": "pcSMcYg3fo9-",
-        "outputId": "a91b4b9f-54ef-482c-83e5-e2867241da79"
+        "outputId": "0e271ad7-dd04-4499-b03a-32d22e709b92"
       },
       "source": [
-        "display(hourdf_analyse)"
+        "d.display(hourdf_analyse)"
       ],
-      "execution_count": 23,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2063,15 +2074,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 417
         },
         "id": "cTKG60SdgJOh",
-        "outputId": "407a022a-fec0-45d8-cca4-6dfb1b13970e"
+        "outputId": "9ffb75bf-b0f9-43dc-8772-ba3c30825110"
       },
       "source": [
-        "display(df)"
+        "d.display(df)"
       ],
-      "execution_count": 24,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2281,7 +2292,7 @@
         "   \"Packet Loss\":\"mean\"\n",
         "}).round(2)"
       ],
-      "execution_count": 25,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -2290,14 +2301,14 @@
         "id": "KCiq5eMmi-te",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 447
         },
-        "outputId": "8b16249f-3b90-4b51-b52a-f11bd627a77b"
+        "outputId": "aad96803-4318-491c-a47f-ade383d4f6c6"
       },
       "source": [
-        "display(analysed)"
+        "d.display(analysed)"
       ],
-      "execution_count": 26,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2467,7 +2478,7 @@
       "source": [
         "analysed.to_csv('analytics.csv', index=True)"
       ],
-      "execution_count": 27,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -2483,7 +2494,7 @@
         "  \"Upload\":[\"min\",\"idxmin\",\"max\",\"idxmax\"],\n",
         " \"Packet Loss\":[\"min\",\"idxmin\",\"max\",\"idxmax\"]})"
       ],
-      "execution_count": 28,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -2492,14 +2503,14 @@
         "id": "ILzvaUWFjy9_",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 444
         },
-        "outputId": "77971fc6-d9ee-4053-8c81-51085ba29cf8"
+        "outputId": "a69f9d52-9dab-4d20-94ac-a507cc6cced9"
       },
       "source": [
-        "display(overall_df)"
+        "d.display(overall_df)"
       ],
-      "execution_count": 29,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2789,7 +2800,7 @@
         "  #print(overall_df2[(col,\"idxmin\")])\n",
         "  #print(analysedf2.loc[[x for x in overall_df2[col][\"idxmin\"]]].index.get_level_values(1))"
       ],
-      "execution_count": 30,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -2803,7 +2814,7 @@
         "    \"idxmax\":\"Hour (Max)\"\n",
         "})"
       ],
-      "execution_count": 31,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -2811,15 +2822,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 343
         },
         "id": "5K5DLo69g2IC",
-        "outputId": "0b4df559-235b-496b-f857-7b29127f8b4d"
+        "outputId": "83c7dc97-4e4f-40ba-9222-b6e092f2bc31"
       },
       "source": [
-        "display(overall_df)"
+        "d.display(overall_df)"
       ],
-      "execution_count": 32,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3095,7 +3106,7 @@
       "source": [
         "final_df=overall_df.drop(['min', 'max'],level=1, axis=1)"
       ],
-      "execution_count": 33,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -3103,15 +3114,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 326
         },
         "id": "0_-QZ8yrjIbE",
-        "outputId": "2e87eb3d-328b-48db-9353-c9541a27608f"
+        "outputId": "2d41058d-7e9a-4679-ded9-d8a6fbcb1d2d"
       },
       "source": [
-        "display(final_df)"
+        "d.display(final_df)"
       ],
-      "execution_count": 34,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3317,14 +3328,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e232dac3-10b7-43e8-b732-682eee662d3c"
+        "outputId": "225500d2-d9f8-4950-cfa7-9ea58165cc99"
       },
       "source": [
         "Min_Latency_Day=overall_df[\"Latency\",\"min\"].idxmin()\n",
         "Corresponding_hour=overall_df.loc[overall_df[\"Latency\",\"min\"].idxmin()][\"Latency\"][\"Hour (Min)\"]\n",
         "print(\"Best day and hour for low latency activities: \",Min_Latency_Day,\"and\",Corresponding_hour,\"IST.\")"
       ],
-      "execution_count": 35,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
