Made pip installs

--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPdm04xxAYjCd+zIt4IKNNs",
+      "authorship_tag": "ABX9TyMwXY1w/fnrm+j7Y0BeWMPm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,19 @@
       "source": [
         "## **Making necessary imports**"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WT4eitR5Liaz"
+      },
+      "source": [
+        "!pip install pandas\n",
+        "!pip install matplotlib\n",
+        "!pip install IPython"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
