Added docstring and fixed remaining indentations

--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Internet Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPQbntecTGjt2bxYcPOUO5e",
+      "authorship_tag": "ABX9TyPuBUXAbguRdi0X8LbTnBIR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,9 +29,41 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qaYWmg09GGfa",
+        "outputId": "e0f0bf42-9cad-4ee3-e4e3-afb3d84f1be9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "\"\"\"Internet Analysis\"\"\""
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Internet Analysis'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
-        "id": "HYm3KKvdW5Eu"
+        "id": "ToCGABglGmpb"
       },
       "source": [
         "## **Making necessary installation and imports**"
@@ -41,17 +73,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "WT4eitR5Liaz",
-        "outputId": "634e4aa3-8809-4a44-a292-b720feea9e16",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a6255924-2e3b-43b8-db40-c52bee4d7355"
       },
       "source": [
         "!pip install pandas\n",
         "!pip install matplotlib\n",
         "!pip install IPython"
       ],
-      "execution_count": 66,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,23 +94,23 @@
             "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas) (2.8.1)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (3.2.2)\n",
-            "Requirement already satisfied: numpy>=1.11 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.19.5)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (0.10.0)\n",
             "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.4.7)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.8.1)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.3.1)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (0.10.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.8.1)\n",
+            "Requirement already satisfied: numpy>=1.11 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.19.5)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from cycler>=0.10->matplotlib) (1.15.0)\n",
             "Requirement already satisfied: IPython in /usr/local/lib/python3.7/dist-packages (5.5.0)\n",
+            "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.7/dist-packages (from IPython) (5.0.5)\n",
+            "Requirement already satisfied: pygments in /usr/local/lib/python3.7/dist-packages (from IPython) (2.6.1)\n",
+            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.7/dist-packages (from IPython) (57.2.0)\n",
             "Requirement already satisfied: decorator in /usr/local/lib/python3.7/dist-packages (from IPython) (4.4.2)\n",
+            "Requirement already satisfied: pexpect in /usr/local/lib/python3.7/dist-packages (from IPython) (4.8.0)\n",
+            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.7/dist-packages (from IPython) (0.7.5)\n",
             "Requirement already satisfied: prompt-toolkit<2.0.0,>=1.0.4 in /usr/local/lib/python3.7/dist-packages (from IPython) (1.0.18)\n",
             "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.7/dist-packages (from IPython) (0.8.1)\n",
-            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.7/dist-packages (from IPython) (0.7.5)\n",
-            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.7/dist-packages (from IPython) (57.2.0)\n",
-            "Requirement already satisfied: pexpect in /usr/local/lib/python3.7/dist-packages (from IPython) (4.8.0)\n",
-            "Requirement already satisfied: pygments in /usr/local/lib/python3.7/dist-packages (from IPython) (2.6.1)\n",
-            "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.7/dist-packages (from IPython) (5.0.5)\n",
-            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (0.2.5)\n",
             "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (1.15.0)\n",
+            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (0.2.5)\n",
             "Requirement already satisfied: ipython-genutils in /usr/local/lib/python3.7/dist-packages (from traitlets>=4.2->IPython) (0.2.0)\n",
             "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.7/dist-packages (from pexpect->IPython) (0.7.0)\n"
           ],
@@ -92,12 +124,11 @@
         "id": "8Zvhu_TkMaeL"
       },
       "source": [
-        "import csv\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 67,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -108,7 +139,7 @@
       "source": [
         "import IPython.display as d"
       ],
-      "execution_count": 68,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -119,14 +150,14 @@
           "height": 417
         },
         "id": "kA30xmOUNK77",
-        "outputId": "85095014-8fcc-4928-844f-7a36d133b1ee"
+        "outputId": "b920b249-8d80-4859-9513-b35720bc29c4"
       },
       "source": [
         "datadf = pd.read_csv(\"data.csv\")\n",
         "datadf.rename(columns={\"Unnamed: 0\":\"Time\"},inplace=True)\n",
         "d.display(datadf)"
       ],
-      "execution_count": 69,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "display_data",
@@ -365,13 +396,13 @@
           "height": 447
         },
         "id": "-FOqwqHGWoEZ",
-        "outputId": "c37a8d4c-49bb-435c-885a-91c798e244a8"
+        "outputId": "262f1422-7a38-42e1-8fa9-7490f7fa95ca"
       },
       "source": [
         "outagedf=datadf.set_index(\"Time\",inplace=False)\n",
         "d.display(outagedf)"
       ],
-      "execution_count": 70,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "display_data",
@@ -566,8 +597,8 @@
         "day_outages={}\n",
         "hour_outages={}\n",
         "days=[\"Sun\",\"Mon\",\"Tue\",\"Wed\",\"Thu\",\"Fri\",\"Sat\"]\n",
-        "hours=[i for i in range(24)]\n",
-        "columns=[x for x in outagedf]\n",
+        "hours=[i for i in list(range(24))]\n",
+        "columns=[x for x in list(outagedf)]\n",
         "columns.remove(\"Server\")\n",
         "servers={}\n",
         "\n",
@@ -582,13 +613,13 @@
         "    if isinstance(outagedf.loc[i][\"Server\"],str):\n",
         "        servers[outagedf.loc[i][\"Server\"]]=servers.get(outagedf.loc[i][\"Server\"],0)+1\n",
         "    for x in columns:\n",
-        "      if not np.isnan(outagedf.loc[i][x]):\n",
-        "        F=1\n",
+        "        if not np.isnan(outagedf.loc[i][x]):\n",
+        "          F=1\n",
         "    if F==0:\n",
-        "      day_outages[i[:3]]+=1\n",
-        "      hour_outages[str(int(i[11:13]))+\":00\"]+=1"
+        "        day_outages[i[:3]]+=1\n",
+        "        hour_outages[str(int(i[11:13]))+\":00\"]+=1"
       ],
-      "execution_count": 71,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -599,14 +630,14 @@
           "height": 805
         },
         "id": "XLz8X0OLadTG",
-        "outputId": "cbead75c-23f9-4421-cf6e-f4135d8f937b"
+        "outputId": "646f3812-27ac-4e6b-d433-15d70bc681a4"
       },
       "source": [
         "hour_outagedf=pd.DataFrame({\"Count\":hour_outages}).sort_values([\"Count\"],ascending=0)\n",
         "print(\"Number of outages in each hour:\")\n",
         "d.display(hour_outagedf)"
       ],
-      "execution_count": 72,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,7 +814,7 @@
           "height": 346
         },
         "id": "LB_7lVN3arOs",
-        "outputId": "b64fdaa0-746e-4b03-e8ca-885c963baf89"
+        "outputId": "b8ba4b28-9755-4e64-86e8-70f6811051dd"
       },
       "source": [
         "keys=hour_outages.keys()\n",
@@ -796,7 +827,7 @@
         "plt.title(\"Network Outages\",pad='10',fontsize=20)\n",
         "plt.show()"
       ],
-      "execution_count": 73,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "display_data",
@@ -830,14 +861,14 @@
           "height": 282
         },
         "id": "z8Il_zKrbHWN",
-        "outputId": "9fab61b7-345f-49fa-f0d0-9aecae67f1d3"
+        "outputId": "16eeee0e-abe7-4069-cff4-170a0ca3f8c5"
       },
       "source": [
         "day_outagedf=pd.DataFrame({\"Count of Days\":day_outages}).sort_values([\"Count of Days\"],ascending=0)\n",
         "print(\"Number of outages in each week day:\")\n",
         "d.display(day_outagedf)"
       ],
-      "execution_count": 74,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -929,7 +960,7 @@
           "height": 364
         },
         "id": "-iN-0_JAbPgs",
-        "outputId": "6b2a6762-5d3e-4e94-dd44-3713a8627d79"
+        "outputId": "e982eb0f-b8ff-45c9-a777-18d891b1e298"
       },
       "source": [
         "keys=day_outages.keys()\n",
@@ -942,7 +973,7 @@
         "plt.title(\"Network Outages\",pad='10',fontsize=20)\n",
         "plt.show()"
       ],
-      "execution_count": 75,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "display_data",
@@ -976,7 +1007,7 @@
           "height": 743
         },
         "id": "99QuTW4AbsMw",
-        "outputId": "d8c956bd-77bb-46aa-c3ca-4c79e2d01fc0"
+        "outputId": "5635376e-1591-4f57-92e6-ffb5138f0f01"
       },
       "source": [
         "connections=pd.DataFrame({\"Connections\":servers})\n",
@@ -984,7 +1015,7 @@
         "print(\"Connections each server made:\")\n",
         "d.display(connections)"
       ],
-      "execution_count": 76,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -1169,7 +1200,7 @@
           "height": 417
         },
         "id": "rgldax80dig4",
-        "outputId": "92ee07ac-a2fb-4878-cd0c-1bc7572d1422"
+        "outputId": "b9cf1cbf-ca62-434f-d461-f7c6cbdec1a4"
       },
       "source": [
         "df=datadf.copy()\n",
@@ -1177,7 +1208,7 @@
         "df.insert (1,\"Hour\",[row[11:13]+\":00\" for row in df[\"Time\"]])\n",
         "d.display(df)"
       ],
-      "execution_count": 77,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1395,7 +1426,7 @@
         "  \"Upload\":\"mean\",\n",
         " \"Packet Loss\":\"mean\"}).round(2)"
       ],
-      "execution_count": 78,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -1406,12 +1437,12 @@
           "height": 295
         },
         "id": "6o6w89f9ea1e",
-        "outputId": "43af650d-dd9f-4640-d93c-887c7fa55150"
+        "outputId": "1ae62a0a-a26d-4f93-e689-ca6c2617632a"
       },
       "source": [
         "d.display(daydf)"
       ],
-      "execution_count": 79,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1537,7 +1568,7 @@
       "source": [
         "daydf_analyse=pd.DataFrame({\"Minimum on\":daydf.idxmin(),\"Maximum on\":daydf.idxmax()})"
       ],
-      "execution_count": 80,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -1548,12 +1579,12 @@
           "height": 203
         },
         "id": "U52SDFSxepx1",
-        "outputId": "9c1703b2-472d-4ea9-f000-a4a4ec8ae299"
+        "outputId": "f44bc23e-9a07-465d-9094-54df2e3e9654"
       },
       "source": [
         "d.display(daydf_analyse)"
       ],
-      "execution_count": 81,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1679,7 +1710,7 @@
         "  \"Upload\":\"mean\",\n",
         " \"Packet Loss\":\"mean\"}).round(2)"
       ],
-      "execution_count": 82,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -1690,12 +1721,12 @@
           "height": 819
         },
         "id": "oDltLElvfHq8",
-        "outputId": "de7fac9c-0183-4ed7-e761-97802e1b54df"
+        "outputId": "2f035c75-749c-400c-fde7-18e6d9dd19a0"
       },
       "source": [
         "d.display(hourdf)"
       ],
-      "execution_count": 83,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1974,7 +2005,7 @@
       "source": [
         "hourdf_analyse=pd.DataFrame({\"Minimum at\":hourdf.idxmin(),\"Maximum at\":hourdf.idxmax()})"
       ],
-      "execution_count": 84,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -1985,12 +2016,12 @@
           "height": 203
         },
         "id": "pcSMcYg3fo9-",
-        "outputId": "0e84ba29-2a45-451d-8072-261be531a39b"
+        "outputId": "b43f923e-0df6-422c-fdc9-0ef5614ee167"
       },
       "source": [
         "d.display(hourdf_analyse)"
       ],
-      "execution_count": 85,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2111,12 +2142,12 @@
           "height": 417
         },
         "id": "cTKG60SdgJOh",
-        "outputId": "d3904f55-f767-4b93-a5ac-e7baeea0777c"
+        "outputId": "da87590c-d5f6-4416-d82b-abbcd8b271be"
       },
       "source": [
         "d.display(df)"
       ],
-      "execution_count": 86,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2326,7 +2357,7 @@
         "   \"Packet Loss\":\"mean\"\n",
         "}).round(2)"
       ],
-      "execution_count": 87,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -2337,12 +2368,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 447
         },
-        "outputId": "8ba070f4-80f6-4b5d-e4fc-d9c3bdfbb053"
+        "outputId": "f89e6b1c-fbbc-4d9a-94b1-e8fb238b8931"
       },
       "source": [
         "d.display(analysed)"
       ],
-      "execution_count": 88,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2512,7 +2543,7 @@
       "source": [
         "analysed.to_csv('analytics.csv', index=True)"
       ],
-      "execution_count": 89,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -2528,7 +2559,7 @@
         "  \"Upload\":[\"min\",\"idxmin\",\"max\",\"idxmax\"],\n",
         " \"Packet Loss\":[\"min\",\"idxmin\",\"max\",\"idxmax\"]})"
       ],
-      "execution_count": 90,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -2539,12 +2570,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 444
         },
-        "outputId": "0a266b96-85e1-41c4-a7b8-28a405432485"
+        "outputId": "d2501f96-8fda-40aa-bad4-6722974874a0"
       },
       "source": [
         "d.display(overall_df)"
       ],
-      "execution_count": 91,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2831,12 +2862,12 @@
         "for col in columns:\n",
         "    overall_df[(col,\"idxmin\")]=analysed.loc[[x for x in overall_df[col][\"idxmin\"]]]\\\n",
         "    .index.get_level_values(1)\n",
-        "    overall_df[(col,\"idxmax\")]=analysed.loc[[x for x in overall_df[col][\"idxmax\"]]]\n",
+        "    overall_df[(col,\"idxmax\")]=analysed.loc[[x for x in overall_df[col][\"idxmax\"]]]\\\n",
         "    .index.get_level_values(1)\n",
         "  #print(overall_df2[(col,\"idxmin\")])\n",
         "  #print(analysedf2.loc[[x for x in overall_df2[col][\"idxmin\"]]].index.get_level_values(1))"
       ],
-      "execution_count": 92,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -2850,7 +2881,7 @@
         "    \"idxmax\":\"Hour (Max)\"\n",
         "})"
       ],
-      "execution_count": 93,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -2861,12 +2892,12 @@
           "height": 343
         },
         "id": "5K5DLo69g2IC",
-        "outputId": "aa1295eb-2536-4333-f191-d65a03924475"
+        "outputId": "70638169-0c27-45be-d7d4-337a10819df6"
       },
       "source": [
         "d.display(overall_df)"
       ],
-      "execution_count": 94,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3142,7 +3173,7 @@
       "source": [
         "final_df=overall_df.drop(['min', 'max'],level=1, axis=1)"
       ],
-      "execution_count": 95,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -3153,12 +3184,12 @@
           "height": 326
         },
         "id": "0_-QZ8yrjIbE",
-        "outputId": "16965269-fee8-49ab-bfe1-7e95af4190db"
+        "outputId": "5ce11cf5-cc05-4168-bfa9-4e102e73fcca"
       },
       "source": [
         "d.display(final_df)"
       ],
-      "execution_count": 96,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3364,14 +3395,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bfbc3226-b7e6-4351-c24a-3b86269bb9d8"
+        "outputId": "6dfeb0bf-a75f-4145-a11b-92bdadc16794"
       },
       "source": [
         "Min_Latency_Day=overall_df[\"Latency\",\"min\"].idxmin()\n",
         "Corresponding_hour=overall_df.loc[overall_df[\"Latency\",\"min\"].idxmin()][\"Latency\"][\"Hour (Min)\"]\n",
         "print(\"Best day and hour for low latency activities: \",Min_Latency_Day,\"and\",Corresponding_hour,\"IST.\")"
       ],
-      "execution_count": 97,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
